--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,8 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+    script(src="/javascript/handlebars-v3.0.1.js")
+    h1= "Reddit"
+    p
+    body
+        include linkView.html
