--- a/views/linkIt.jade
+++ b/views/linkIt.jade
@@ -5,10 +5,8 @@ extends layout
 block content
     script(type='text/javascript' src="/javascript/clientHandler.js")
     script(type='text/javascript' src="/javascript/jquery-1.11.2.min.js")
-    h1= title
-    p Hallo bei #{title}
+    h1 Reddit
     body
-        h1 Test
         table
             tr
                 th ID
@@ -23,4 +21,5 @@ block content
                     td #{link.url}
                     td #{link.author}
                     td #{link.rating.value}
-        button(onclick='postLink("Golem","www.golem.de","#{username}")') Create
+        p
+        button(onclick='postLink("Golem","www.golem.de","#{username}")') Create new sample link
