--- a/views/linkIt.jade
+++ b/views/linkIt.jade
@@ -5,6 +5,7 @@ extends layout
 block content
     script(type='text/javascript' src="/javascript/clientHandler.js")
     script(type='text/javascript' src="/javascript/jquery-1.11.2.min.js")
+    script(type='text/javascript' src="/javascript/handlebars-v3.0.1.js")
     h1 Reddit
     body
         table
@@ -23,3 +24,6 @@ block content
                     td #{link.rating.value}
         p
         button(onclick='postLink("Golem","www.golem.de","#{username}")') Create new sample link
+        script(type="text/x-handlebars-template" id="linkData").
+
+
