--- a/views/linkIt.jade
+++ b/views/linkIt.jade
@@ -3,11 +3,31 @@
 extends layout
 
 block content
-    script(type='text/javascript' src="/javascript/clientHandler.js")
     script(type='text/javascript' src="/javascript/jquery-1.11.2.min.js")
     script(type='text/javascript' src="/javascript/handlebars-v3.0.1.js")
+    script(type='text/javascript' src="/javascript/clientHandler.js")
+    script(type="text/x-handlebars-template" id="contentTemplate").
+        <div>
+        <table>
+        <tr>
+        <th>Title</th>
+        <th>URL</th>
+        <th>Author</th>
+        <th>Rating</th>
+        </tr>
+        {{#each data}}
+        <tr>
+        <td>{{title}}</td>
+        <td>{{url}}</td>
+        <td>{{author}}</td>
+        <td>{{rating.value}}</td>
+        </tr>
+        {{/each}}
+        </table>
+        </div>
     h1 Reddit
     body
+        #linkContent
         table
             tr
                 th ID
@@ -24,6 +44,4 @@ block content
                     td #{link.rating.value}
         p
         button(onclick='postLink("Golem","www.golem.de","#{username}")') Create new sample link
-        script(type="text/x-handlebars-template" id="linkData").
-
 
