--- a/views/linkIt.jade
+++ b/views/linkIt.jade
@@ -14,18 +14,19 @@ block content
         <th>URL</th>
         <th>Author</th>
         <th>Rating</th>
-        <th>up</th>
-        <th>down</th>
         </tr>
         {{#each data}}
+        {{#if this}}
         <tr>
         <td>{{title}}</td>
         <td>{{url}}</td>
         <td>{{author}}</td>
         <td>{{rating.value}}</td>
-        <td><button onclick="upVote()">&uarr;</button></td>
-        <td><button onclick="downVote()">&darr;</button></td>
+        <td><button onclick="upVote({{id}})">&uarr;</button></td>
+        <td><button onclick="downVote({{id}})">&darr;</button></td>
+        <td><button onclick="deleteLink({{id}})">DELETE</button></td>
         </tr>
+        {{/if}}
         {{/each}}
         </table>
         </div>
