--- a/views/linkIt.jade
+++ b/views/linkIt.jade
@@ -7,18 +7,6 @@ block content
     script(type='text/javascript' src="/javascript/handlebars-v3.0.1.js")
     script(type='text/javascript' src="/javascript/clientHandler.js")
     script(type="text/x-handlebars-template" id="contentTemplate").
-        <div>
-            <form id="newLink" action="/links" method="put">
-                <label>Title</label>
-                <input type="text" id=title required><br>
-                <label>URL</label>
-                <input type="url" id=url required pattern="https?://.+"><br>
-                <label>Author</label>
-                <input type="text" id=username><br>
-                <button id=postNewLink onclick="submitLink()">Post Link</button>
-            </form>
-        </div>
-        <p>
         <div id=links>
             <table>
                 <tr>
@@ -35,8 +23,8 @@ block content
                     <td>{{author}}</td>
                     <td>{{rating.value}}</td>
                     <td><button data-id={{id}} class="upvote">&uarr;</button></td>
-                    <td><button onclick="downVote({{id}})">&darr;</button></td>
-                    <td><button onclick="deleteLink({{id}})">DELETE</button></td>
+                    <td><button data-id={{id}} class="downvote">&darr;</button></td>
+                    <td><button data-id={{id}} class="deletelink">DELETE</button></td>
                 </tr>
             {{/if}}
             {{/each}}
@@ -45,7 +33,20 @@ block content
     h1 Reddit clone 2.0
     p Add new link:
     body
+        div
+            form(id="newLink" action="/links" method="put")
+                label Title
+                input(type="text" id="title" required=true)
+                br
+                label URL
+                input(type="url" id="url" required=true pattern="https?://.+")
+                br
+                label Author
+                input(type="text" id="username")
+                br
+                button(id="postNewLink") Post Link
         #linkContent
+
         //table
         //    tr
         //        th ID
