/register working with postman. Login works but no login message is shown. Maybe because the "if user" statement in the jade file wont be rechecked without a page reload.

--- a/views/linkIt.jade
+++ b/views/linkIt.jade
@@ -56,7 +56,7 @@ block content
                         label Username
                         input(type="text" id="username" required=true)
                         label Password
-                        input(type="passphrase" id="password" required=true)
+                        input(type="password" id="password" required=true)
                         button(id="login") Login
 
         #linkContent
