--- a/views/linkIt.jade
+++ b/views/linkIt.jade
@@ -3,6 +3,7 @@
 extends layout
 var userHandler = require("./loginHandler.js");
 var user = userHandler.getLogin(req.session.user_id);
+var loginState = userHandler.userLoggedIn();
 block content
     script(type='text/javascript' src="/javascript/jquery-1.11.2.min.js")
     script(type='text/javascript' src="/javascript/handlebars-v3.0.1.js")
@@ -25,7 +26,7 @@ block content
                     <td>{{rating.value}}</td>
                     <td><button data-id={{id}} class="upvote">&uarr;</button></td>
                     <td><button data-id={{id}} class="downvote">&darr;</button></td>
-                    {{#if req.session.user_i}}
+                    {{#if loginState}}
                         <td><button data-id={{id}} class="deletelink">DELETE</button></td>
                     {{/if}}
                 </tr>
