--- a/views/linkIt.jade
+++ b/views/linkIt.jade
@@ -6,83 +6,80 @@ block content
     script(type='text/javascript' src="/javascript/handlebars-v3.0.1.js")
     script(type='text/javascript' src="/javascript/clientHandler.js")
     script(type="text/x-handlebars-template" id="contentTemplate").
-                <div id=links>
-                    <div id="header">
-                        <div id="title">
-                            Title
+        <div id=links class="pure-u-1">
+            <div id="header" class="pure-u-1">
+                <div class="pure-u-1-4" id="title">
+                    Title
+                </div>
+                <div class="pure-u-1-4" id="url">
+                    URL
+                </div>
+                <div class="pure-u-1-4" id="author">
+                    Author
+                </div>
+                <div class="pure-u-1-4" id="rating">
+                    Rating
+                </div>
+            </div>
+            <div id="content" class="pure-u-1">
+                {{#each data}}
+                {{#if this}}
+                    <div class="linkEntry pure-u-1" id={{id}}>
+                        <div class="title pure-u-1-5">
+                            {{title}}
                         </div>
-                        <div id="url">
-                            URL
+                        <div class="url pure-u-1-5">
+                            {{url}}
                         </div>
-                        <div id="author">
-                            Author
+                        <div class="author pure-u-1-5">
+                            {{author}}
                         </div>
-                        <div id="rating">
-                            Rating
+                        <div class="rating pure-u-1-5">
+                            {{rating.value}}
                         </div>
-                    </div>
-                    <div id="content">
-                        {{#each data}}
-                        {{#if this}}
-                            <div class="linkEntry" id={{id}}>
-                                <div class="title">
-                                    {{title}}
+                        {{#if ../../username}}
+                            <div class="buttonArea pure-u-1-5">
+                                <div class="upvoteArea pure-u-1-3">
+                                    <button data-id={{id}} class="upvote pure-button">&uarr;</button>
                                 </div>
-                                <div class="url">
-                                    {{url}}
+                                <div class="downvoteArea pure-u-1-3">
+                                    <button data-id={{id}} class="downvote pure-button">&darr;</button>
                                 </div>
-                                <div class="author">
-                                    {{author}}
-                                </div>
-                                <div class="rating">
-                                    {{rating.value}}
-                                </div>
-                                {{#if ../../username}}
-                                <div class="buttonArea>
-                                    <div class="upvoteArea">
-                                        <button data-id={{id}} class="upvote">&uarr;</button>
+                                {{#ifCond ../../../username '==' author}}
+                                    <div class="deleteArea pure-u-1-3">
+                                        <button data-id={{id}} class="deletelink pure-button">DELETE</button>
                                     </div>
-                                    <div class="downvoteArea">
-                                        <button data-id={{id}} class="downvote">&darr;</button>
-                                    </div>
-                                    {{#ifCond ../../../username '==' author}}
-                                    <div class="deleteArea">
-                                        <button data-id={{id}} class="deletelink">DELETE</button>
-                                    </div>
-                                    {{/ifCond}}
-                                </div>
-                                {{/if}}
+                                {{/ifCond}}
                             </div>
                         {{/if}}
-                        {{/each}}
                     </div>
-                </div>
+                {{/if}}
+                {{/each}}
+            </div>
+        </div>
     script(type="text/x-handlebars-template" id="loginTemplate").
         {{#if name}}
             You're loggin in as {{name}}
-            <button id="logout">Logout</button>
+            <button id="logout" class="pure-button pure-button-primary">Logout</button>
             <p>
-            <form id="newLink" action="/links" method="post">
+            <form class="pure-form" id="newLink" action="/links" method="post">
                 Add new link:</br>
-                <label>Title: </label>
-                <input type="text" id="title" required=true></br>
-                <label>URL: </label>
-                <input type="url" id="url" required=true pattern="https?://.+"></br>
-                <button id="postNewLink">Post Link</button>
+                <input type="text" id="title" required=true placeholder="Title"></br>
+                <input type="url" id="url" required=true pattern="https?://.+" placeholder="URL"></br>
+                <button id="postNewLink" class="pure-button pure-button-primary">Post Link</button>
                 <p>
             </form>
         {{else}}
-            <form id="loginForm" action="/login" method="post">
-                <label>Username</label>
-                <input type="text" id="username" required=true>
-                <label>Password</label>
-                <input type="password" id="password" required=true>
-                <button id="login">Login</button>
+            <form class="pure-form" id="loginForm" action="/login" method="post">
+                <label>Login</label></br></br>
+                <input type="text" id="username" required=true placeholder="Username">
+                <input type="password" id="password" required=true placeholder="Password"></br></br>
+                <button id="login" class="pure-button pure-button-primary">Login</button>
             </form>
             <br>
         {{/if}}
     h1 Reddit clone 2.0
-    body
+    body(class="content")
         //div
         //    form(id="newLink" action="/links" method="put")
         //        label Title
@@ -96,10 +93,9 @@ block content
         //        br
         //        button(id="postNewLink") Post Link
         //div
-        #loginContent
-
-        #linkContent
-
+        #container(class="pure-g-r")
+            #loginContent(class="l-box-lrg pure-u-1-4")
+            #linkContent(class="l-box-lrg pure-u-3-4")
         //table
         //    tr
         //        th ID
