Register form added but not working

--- a/views/linkIt.jade
+++ b/views/linkIt.jade
@@ -63,6 +63,17 @@ block content
                 <fieldset>
             </form>
             <br>
+            <!--<form class="pure-form" id="registerForm" action="/register" method="post">-->
+                <!--<fieldset>-->
+                    <!--<p>-->
+                    <!--Register-->
+                    <!--<p>-->
+                    <!--<input type="text" id="username" required=true placeholder="Username">-->
+                    <!--<input type="password" id="password" required=true placeholder="Password"></br></br>-->
+                    <!--<button id="register" class="pure-button pure-button-primary">Register</button>-->
+                <!--<fieldset>-->
+            <!--</form>-->
+            <!--<br>-->
         {{/if}}
     body
 
