--- a/public/stylesheets/pure-min.css
+++ b/public/stylesheets/pure-min.css
@@ -474,7 +474,8 @@ td, th {
     vertical-align: middle;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-    box-sizing: border-box
+    box-sizing: border-box;
+    color: #000
 }
 
 .pure-form input:not([type]) {
