--- a/views/linkIt.jade
+++ b/views/linkIt.jade
@@ -14,7 +14,7 @@ block content
                         <header class="post-header">
                             <h2 class="post-title">{{title}}</h2>
                             <p class="post-meta">
-                                By {{author}}
+                                By {{author}} at {{createTimeDisplay}}
                             </p>
                             <p class="post-votebuttons">
                             {{#if ../../username}}
